--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,4 +6,16 @@ services:
       - 8000:3000
     volumes:
       - .:/app
-      
+    depends_on:
+      - db
+
+  db:
+    image: mysql:8.0.31
+    restart: always
+    environment:
+      MYSQL_DATABASE: ambassador
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+    volumes:
+      - .dbdata:/var/lib/mysql
+    ports:
+      - 33066:3306
